<resources>
    <string name="app_name">Bookingerz</string>
    <string name="register_name">Register</string>
    <string name="login_name">Login</string>
    <string name="setting_name">Setting</string>
    <string name="profile_name">Profile</string>
    <string name="eticket_name">E-Ticket</string>
    <string name="update_acara">Update Acara</string>
    <string name="detailacara_name">Detail Acara</string>
    <string name="addacara_name">Add Event</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Search</string>

    // RegisterLogin
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Sign up</string>
    <string name="btn_link_to_login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="tx_judul">JUDUL ACARA</string>
    <string name="tx_penyelenggara">PENYELENGGARA</string>
    <string name="tx_hargatiket">HARGA TIKET</string>
    <string name="tx_ketacara">KETERANGAN</string>
    <string name="btn_batal">CANCEL</string>
    <string name="tx_namalengkap">Nama Lengkap</string>
    <string name="tx_notlp">No Telepon</string>
    <string name="tx_tanggallahir">Tanggal Lahir</string>
    <string name="btn_pp">Profil Picture</string>
    <string name="btn_about">TENTANG APLIKASI</string>
    <string name="menu_addevent">Add Event</string>
    <string name="btn_submitevent">ADD</string>
    <string name="btn_datepicker">Tanggal</string>
    <string name="btn_timepicker">Jam</string>
    <string name="btn_booking">ENTER</string>

    // Nav Drawer
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profile</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="btn_saveticket">Save</string>
    <string name="tv_tgllahir">Tgl Lahir : </string>
    <string name="tv_notelpll">NoTelp : </string>
    <string name="tv_emailll">Email : </string>
    <string name="tv_namall">Nama : </string>
    <string name="Bookingerz">Bookingerz</string>
    <string name="version">v1.0</string>
    <string name="Dev">Dev</string>
    <string name="RenoPutraAdiNugraha">Reno Putra Adi Nugraha</string>
    <string name="BinarPutriPratiwi">Binar Putri Pratiwi</string>
    <string name="AlanFitriyanto">Alan Fitriyanto</string>
    <string name="SitiNuraisyirohFarianah">Siti Nuraisyiroh Farianah</string>
</resources>
